- diskdrake:
  o fix typo breaking reading fstab with UUID= entries
- localedrake:
  o enable to select 'scim-bridge' as IM
  o install needed packages for skim

Version 10.4.195 - 14 September 2007, by Thierry Vignaud

- distinct exceptions from segfaults, thus restoring catching SIGSEGV
  and preventing looping while segfaulting again
- fix loading of tifm_sd module (#18237)
- run_program layer: enable to drop privileges through setuid()
- drakbug:
  o run the regular user browser (#33522)

Version 10.4.193 - 13 September 2007, by Thierry Vignaud

- drakbug:
  o better behaviour when resizing
  o use a TextView instead of Label so that text is selectable (see #33023)
  o better formatting
- draksound:
  o prevent stupid & useless "driver for your sound card is unlisted"
  o no more need to:
    * list OSS/ALSA alternatives if none
    * sync with list_modules

Version 10.4.192 - 12 September 2007, by Olivier "blino" Blin

- localedrake
  o drop support for iiimf
- list jmicron driver in disk/ide
- library: have "defaults" mount option instead of empty string (for rescue)
- service_harddrake: drop snd-usb-audio blacklist, now done with a modprobe.d file

Version 10.4.190 - 5 September 2007, by Thierry Vignaud

- display a warning when capslock is enabled and entering a password (#33028)

Version 10.4.188 - 4 September 2007, by Thierry Vignaud

- hardware detection layer:
  o add support for tape device again (#31073)
  o enumerate generic SCSI devices again
- diskdrake
  o add a comment (a la ubuntu) in fstab when using UUID=
- harddrake
  o detect PS2 to USB converters as keyboards
  o display an identifier for generic SCSI devices
  o list generic SCSI devices

Version 10.4.184 - 3 September 2007, by Thierry Vignaud

- diskdrake
  o support for UUID in filesystems (and UUID=... in fstab)

Version 10.4.183 - 31 August 2007, by Pascal "Pixel" Rigaux

- bootloader-config
  o handle new naming of vmlinuz flavors: vmlinuz-<version>-<flavor>-Xmdv