@@ -3,6 +3,7 @@
 - localedrake:
   o enable to select 'scim-bridge' as IM
   o install needed packages for skim
+  o install scim-qtimm for scim default config
 
 Version 10.4.195 - 14 September 2007, by Thierry Vignaud
 
